make some changes

--- a/angula/src/app/pages/login/login.component.html
+++ b/angula/src/app/pages/login/login.component.html
@@ -19,7 +19,7 @@
               <input type="checkbox" class="form-check-input" id="remember">
               <label class="form-check-label" for="remember">Remember me</label>
             </div><br>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
+            <button type="submit" class="btn btn-primary btn-block" [routerLink]="['/home']">Login</button>
           </form>
         </div>
         <div class="card-footer text-muted text-center">
