--- a/angula/src/app/pages/home/home.component.html
+++ b/angula/src/app/pages/home/home.component.html
@@ -1,1 +1,135 @@
-<p>home works!</p>
+
+<header>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand p-2" [routerLink]="['/nav-bar']">Boda Boda</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" [routerLink]="['/nav-bar']">Home</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/nav-bar/login']">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/nav-bar/register']">Register</a>
+          </li> -->
+        </ul>
+      </div>
+    </nav>
+  </div>
+</header>
+
+
+<main >
+  <div class="container pt-5">
+    <div class="d-flex justify-content-end">
+      <button class="btn btn-primary" (click)="openDialogAddUser() ">Add User</button>
+    </div><hr>
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Sn</th>
+          <th>First Name</th>
+          <th>Second Name</th>
+          <th>Last Name</th>
+          <th>Phone</th>
+          <th>Address</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of data">
+          <td>{{user.user_id}}</td>
+          <td>{{user.first_name}}</td>
+          <td>{{user.second_name}}</td>
+          <td>{{user.lastname}}</td>
+          <td>{{user.phone}}</td>
+          <td>{{user.address}}</td>
+          <td><button class="btn btn-primary" (click)="openDialog(user)">Edit</button><button class="btn btn-danger" (click)="delete(user)">Delete</button></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+</main>
+<!-- <button mat-button ">Open Dialog</button> -->
+<ng-template #sayHelloTemplate>
+
+    <div class="card">
+      <div class="card-header">
+        <h4>Update User Information</h4>
+      </div>
+      <div class="card-body">
+        <form #myForm="ngForm" (ngSubmit)="UpdateUser()">
+          <div class="form-group">
+            <label for="">First Name</label>
+            <input type="text" class="form-control" name="firstName" [(ngModel)]="user_info.first_name" required [ngModelOptions]="{ standalone: true }">
+          </div>
+          <div class="form-group">
+            <label for="">Second Name</label>
+            <input type="text" class="form-control" name="secondName" [(ngModel)]="user_info.second_name" required [ngModelOptions]="{ standalone: true }">
+          </div>
+          <div class="form-group">
+            <label for="">Last Name</label>
+            <input type="text" class="form-control" name="lastName" [(ngModel)]="user_info.lastname" required [ngModelOptions]="{ standalone: true }">
+          </div>
+          <div class="form-group">
+            <label for="">Phone</label>
+            <input type="text" class="form-control" name="phone" [(ngModel)]="user_info.phone" required [ngModelOptions]="{ standalone: true }">
+          </div>
+          <div class="form-group">
+            <label for="">Address</label>
+            <input type="text" class="form-control" name="address" [(ngModel)]="user_info.address" required [ngModelOptions]="{ standalone: true }">
+          </div>
+          <hr>
+          <div class="form-group">
+            <button class="btn btn-success" type="submit" [disabled]="myForm.invalid">Update</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+</ng-template>
+<ng-template #adduser>
+
+  <div class="card">
+    <div class="card-header">
+      <h4>Add User Information</h4>
+    </div>
+    <div class="card-body">
+      <form #myForm="ngForm" (ngSubmit)="AddUser()">
+        <input type="hidden" [(ngModel)]="user_info.user_id" required [ngModelOptions]="{ standalone: true }">
+        <div class="form-group">
+          <label for="">First Name</label>
+          <input type="text" class="form-control" name="firstName" [(ngModel)]="user_info.first_name" required [ngModelOptions]="{ standalone: true }">
+        </div>
+        <div class="form-group">
+          <label for="">Second Name</label>
+          <input type="text" class="form-control" name="secondName" [(ngModel)]="user_info.second_name" required [ngModelOptions]="{ standalone: true }">
+        </div>
+        <div class="form-group">
+          <label for="">Last Name</label>
+          <input type="text" class="form-control" name="lastName" [(ngModel)]="user_info.lastname" required [ngModelOptions]="{ standalone: true }">
+        </div>
+        <div class="form-group">
+          <label for="">Phone</label>
+          <input type="text" class="form-control" name="phone" [(ngModel)]="user_info.phone" required [ngModelOptions]="{ standalone: true }">
+        </div>
+        <div class="form-group">
+          <label for="">Address</label>
+          <input type="text" class="form-control" name="address" [(ngModel)]="user_info.address" required [ngModelOptions]="{ standalone: true }">
+        </div>
+        <hr>
+        <div class="form-group">
+          <button class="btn btn-success" type="submit" [disabled]="myForm.invalid">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+</ng-template>
