--- a/angula/src/app/pages/home/home.component.html
+++ b/angula/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 
-<header>
+<header *ngIf="check_login">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand p-2" [routerLink]="['/nav-bar']">Boda Boda</a>
@@ -11,6 +11,13 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" [routerLink]="['/nav-bar']">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" >{{username}}</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link btn btn-danger"  (click)="logout()">logout</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" [routerLink]="['/nav-bar/login']">Login</a>
@@ -25,7 +32,7 @@
 </header>
 
 
-<main >
+<main *ngIf="check_login">
   <div class="container pt-5">
     <div class="d-flex justify-content-end">
       <button class="btn btn-primary" (click)="openDialogAddUser() ">Add User</button>
@@ -57,6 +64,17 @@
   </div>
 
 </main>
+
+<div class="container"  *ngIf="error">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 text-center mt-5">
+      <h1 class="display-4">404</h1>
+      <p class="lead">Page not found</p>
+      <p>Oops! The page you are looking for does not exist.</p>
+      <a href="/" class="btn btn-primary">Go Back to Homepage</a>
+    </div>
+  </div>
+</div>
 <!-- <button mat-button ">Open Dialog</button> -->
 <ng-template #sayHelloTemplate>
 
