--- a/angula/src/app/pages/register/register.component.html
+++ b/angula/src/app/pages/register/register.component.html
@@ -6,7 +6,8 @@
           <h5 class="card-title text-center">Register</h5>
         </div>
         <div class="card-body">
-          <form (ngSubmit)="register()"  #registrationForm="ngForm">
+          <form (ngSubmit)="register()" #registrationForm="ngForm">
+            <!-- <input type="hidden" [(ngModel)]="loginModel.roles" value="user"> -->
             <div class="form-group">
               <label for="email">Email</label>
               <input type="email" class="form-control" [(ngModel)]="loginModel.username" name="username"
@@ -22,10 +23,12 @@
               <input type="password" class="form-control" [(ngModel)]="loginModel.confirmPassword"
                 name="confirmPassword" placeholder="Confirm your password" required="">
             </div><br>
-            <button type="submit" class="btn btn-primary btn-block" [disabled]="!registrationForm.form.valid">Register</button>          </form>
+            <button type="submit" class="btn btn-primary btn-block"
+              [disabled]="!registrationForm.form.valid">Register</button>
+          </form>
         </div>
         <div class="card-footer text-muted text-center">
-          Already have an account? <a href="#">Login</a>
+          Already have an account? <a [routerLink]="['/nav-bar/login']">Login</a>
         </div>
       </div>
     </div>
