--- a/angula/src/app/pages/home/home.component.html
+++ b/angula/src/app/pages/home/home.component.html
@@ -61,10 +61,45 @@
         </tr>
       </tbody>
     </table>
+      <!-- post image Form and Table  -->
+      <div class="row">
+        <div class="col-md-5">
+          <div class="card">
+            <div class="card-header">
+              <h4>Image</h4>
+            </div>
+            <div class="card-body">
+              <form (ngSubmit)="uploadFile()" enctype="multipart/form-data">
+                <input type="file" name="file" (change)="onFileSelected($event)" />
+                <button type="submit">Upload</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Image</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let file of files">
+            <td>{{ file.name }}</td>
+            <td>
+              <img [src]="file.url" alt="{{ file.name }}" width="100" height="100">
+            </td>
+          </tr>
+        </tbody>
+      </table>
   </div>
 
-</main>
 
+
+</main>
+<!-- Error Page -->
 <div class="container"  *ngIf="error">
   <div class="row">
     <div class="col-md-6 offset-md-3 text-center mt-5">
