--- a/angula/src/app/pages/home/home.component.html
+++ b/angula/src/app/pages/home/home.component.html
@@ -37,7 +37,7 @@
     <div class="d-flex justify-content-end">
       <button class="btn btn-primary" (click)="openDialogAddUser() ">Add User</button>
     </div><hr>
-    <table class="table table-bordered">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th>Sn</th>
@@ -62,7 +62,7 @@
       </tbody>
     </table>
       <!-- post image Form and Table  -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-md-5">
           <div class="card">
             <div class="card-header">
@@ -76,9 +76,9 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <table class="table table-bordered">
+      <table class="table table-bordered">
         <thead>
           <tr>
             <th>Name</th>
@@ -86,14 +86,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let file of files">
-            <td>{{ file.name }}</td>
+          <tr *ngFor="let image of images">
+            <td>{{ image.image_name }}</td>
             <td>
-              <img [src]="file.url" alt="{{ file.name }}" width="100" height="100">
+              <!-- <img [src]="file.url" alt="{{ file.name }}" width="100" height="100"> -->
+              <img [src]="getBase64Image(image)" alt="{{ image.image_name }}" />
             </td>
           </tr>
         </tbody>
-      </table> -->
+      </table>
   </div>
 
 </main>
@@ -186,3 +187,38 @@
   </div>
 
 </ng-template>
+<!--
+<div class="container">
+ <form (ngSubmit)="calculate()">
+  <div class="row">
+    <div class="col-md-3">
+      <input type="number" class="form-control" name="input" [(ngModel)]="calculator_model.input" >
+    </div>
+    <div class="col-md-2">
+      <button type="submit" class="btn btn-primary">calculate</button>
+    </div>
+  </div>
+ </form>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Item</th>
+            <th>Cost</th>
+            <th>Total Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+       <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+       </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div> -->
