--- a/angula/src/app/pages/login/login.component.html
+++ b/angula/src/app/pages/login/login.component.html
@@ -2,8 +2,8 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
-        <div class="card-header">
-          <h5 class="card-title text-center">Login</h5>
+        <div class="card-header  text-white" style="background-color: rgba(11, 11, 119, 0.721);">
+          <h3 style="margin: auto;">Sign In</h3>
         </div>
         <div class="card-body">
           <form (ngSubmit)="login()" #registrationForm="ngForm">
