--- a/angula/src/app/pages/register/register.component.html
+++ b/angula/src/app/pages/register/register.component.html
@@ -2,9 +2,9 @@
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card">
-        <div class="card-header">
-          <h5 class="card-title text-center">Register</h5>
-        </div>
+        <div class="card-header  text-white" style="background-color: rgba(11, 11, 119, 0.721);">
+          <h3 style="margin: auto;">Sign Up</h3>
+           </div>
         <div class="card-body">
           <form (ngSubmit)="register()" #registrationForm="ngForm">
             <!-- <input type="hidden" [(ngModel)]="loginModel.roles" value="user"> -->
